--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,22 @@
+
+
 .App {
   text-align: center;
+
 }
+
+.main-body {
+  min-height: 70vh;
+
+
+}
+
+
 body {
-  background-color: #61dafb;
-  background: url ("./weather.jpg");
+  position:static;
+  color:  hsl(45, 81%, 53%);
+  /* background-image: url("../public/weather.jpg"); */
+  
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -17,7 +30,66 @@ code {
     monospace;
 }
 
+.nav {
+  display: flex;
+  justify-content: center;
+  background-color: #01579b;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 20px;
+  /* font-weight: 400; */
 
+}
+
+.link{
+  color: white;
+   margin: 15px;
+}
+
+h2{
+  border-radius: 10px;
+  background-color: #01579b;
+
+}
+
+input {
+  background: #fff3;
+  border: 0;
+  border-radius: 20px;
+  padding: 5px 6px;
+  text-align: center;
+}
+
+button {
+  background:whitesmoke;
+  border: 0;
+  border-radius: 20px;
+  padding: 5px 6px;
+}
+
+.search-weather {
+  background-color: rgb(194, 152, 98);
+  background-image: url("../public/weather.jpg");
+  padding: 20px;
+  margin: 50px;
+  max-width: 200px;
+     color: pink;
+    font-family: 'Recursive', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.footer {
+  /* position: absolute; */
+  bottom: 0;
+  display: inline-block;
+  text-align: center;
+  border-top: 2px solid #01579b;
+  margin: 50px;
+
+}
+
+/* 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -46,4 +118,5 @@ code {
   to {
     transform: rotate(360deg);
   }
-}
+} */
+
